Completed basic requirements - Passed all rspec tests - added Post resource generator, added root path to PostController, integrated Bootstrap, added h1 tag with exact text required, added div, ul, and li tags with requirments, created required css tags

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+.custom-heading {
+  color: red;
+}
+.list {
+  color: blue;
+  font-weight: 600;
+}
